# Create-Schematics

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
backend/: Cargo.toml  users.db
backend/src/: constants.rs  main.rs  schema.rs
backend/src/api/: comments_controller.rs  mod.rs  schematic_controller.rs
backend/src/config/: app.rs  db.rs
backend/src/models/: comments.rs  filters.rs  mod.rs  pagination.rs  schematic.rs
backend/src/services/: comments_service.rs  mod.rs  schematic_service.rs
backend/src/utils/: mod.rs  user_utils.rs
public/: account.ase  spruce.ase
src/: App.vue
src/assets/: main.scss
src/components/: NavigationVue.vue  StarRating.vue
src/components/icons/: AccountIcon.vue  DownloadIcon.vue  LogoIcon.vue  StarIcon.vue
src/components/schematic/: SchematicVue.vue
src/data/: constants.ts
src/styles/: fonts.scss  global.scss  variables.scss
src/views/: HomeView.vue
